1998-12-18  Martin Baulig  <martin@home-of-linux.org>

	* gnome-procbar.c (gnome_proc_bar_draw): Calculate total field
	here and make it work with vertical procbars.
	(gnome_proc_bar_set_values): Always redraw the procbar not just
	if the values have changed.

	* gnome-procbar.c (gnome_proc_bar_draw): New static function.
	(gnome_proc_bar_set_values): Save values in pb->last even if
	the widget is not realized. Moved actual drawing code into
	gnome_proc_bar_draw ().
	(gnome_proc_bar_start): Call the callback here, not only add
	a timeout for it.
	(gnome_proc_bar_configure): Call gnome_proc_bar_draw () if the
	widget is already realized. This fixes the bug that the procbar
	was displaying garbage until the timeout was run the first time.

1998-12-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-app-helper.c (gnome_app_find_menu_pos): consider the
	position after the tear off item to be the topmost one.

1998-12-17  Andrew T. Veliath  <andrewtv@usa.net>

	* gnome-app-helper.c (gnome_app_fill_menu_custom): Prepend a
	tearoff if preferences tell us to.
	(gnome_app_find_menu_pos): When checking if menu item is a
	separator, ignore tear off menu items.

	* gnome-preferences.[ch]: Add preference for menus_have_tearoff.

1998-12-17  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-app.c (gnome_app_realize): Simply show the dock, instead
	of showing_all.
	(gnome_app_set_contents): Show the contents.
	(gnome_app_set_menus): Show the dock item.  Put the dock item into a
	new dock band.  The menubar now goes into
	band 0 (instead of band -1).
	(gnome_app_add_toolbar): Put the dock item into a new dock band.
	The toolbar now goes into band 1 (instead of band 0).

1998-12-17  Andrew T. Veliath  <andrewtv@usa.net>

	* gnome-app.c (gnome_app_set_menus): Make menubar relief agree
	with with toolbar relief (relief on the dock item, around
	handles).

Wed Dec 16 17:53:48 1998  Raph Levien  <raph@gimp.org>

	So far, no changes that affect canvas users or xlib custom items.
